--- a/front-end/hmcts-frontend/index.html
+++ b/front-end/hmcts-frontend/index.html
@@ -7,6 +7,7 @@
     <title>hmcts-frontend</title>
   </head>
   <body>
+    <div id="success-modal"></div>
     <div id="modal-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
